[package]
name = "knot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier = { path = "../atlier" }
lifec = { path = "../lifec" }
imnodes = { git = "https://github.com/benmkw/imnodes-rs.git" }
specs = "0.17.0"
imgui = "0.8.2"
